--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -150,192 +150,103 @@
       </ul>
     </div>
   </div>
-
-  <div class="row kmSection">
-    <ul class="nav nav-pills simple nav-justified">
-      <li role="presentation" class="active"><a href="#count_card_20" data-toggle="pill">Counting and Cardianlity to 20</a></li>
-      <li role="presentation"><a href="#base_10" data-toggle="pill">Base 10</a></li>
-      <li role="presentation"><a href="#number_line_model" data-toggle="pill">Number line model</a></li>
-      <li role="presentation"><a href="#add_sub_all" data-toggle="pill">Addition and Subtraction: Count All</a></li>
-    </ul>
-  </div>
-
 </div>
 
 <div class="container kmSection">
   <div class="tab-content">
-    <div class="tab-pane active" id="count_card_20" role="tabpanel">
-      <div class="row">
-        <div class="col-md-6">
-          <% rows_count = 10 %>
-          <% percentages = [75, 25] %>
-          <%# one row has a height of 40px %>
-          <% row_height = 40 %>
-          <% total_grid_height = rows_count * row_height %>
-          <div class="row apt-title text-center">
-            <div class="col-md-12">
-              <h3>Count</h3>
-            </div>
-          </div>
-          <div class="row apt-body">
-            <div class="col-md-2 font-xxlarge text-right apt-y-axis">
-              <% (1..rows_count).to_a.reverse.each do |item| %>
-                <div><%= item * 10 %>%</div>
-              <% end %>
-            </div>
-            <div class="col-md-10">
-              <div class="row">
-                <% 2.times do |index| %>
-                  <div class="col-md-6 apt-col">
-                    <div class="grid" style="height: <%= total_grid_height %>px;">
-                      <% current_row_height = percentages[index] * row_height / 10 %>
-                      <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
-                    </div>
-                    <div class="apt-x-axis text-center font-xxlarge">
-                      <%= "#{10 * index + (index/100.0).ceil} - #{10 * (index + 1)}" %>
-                    </div>
-                  </div>
-                <% end %>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <% rows_count = 10 %>
-          <% percentages = [75, 25] %>
-          <%# one row has a height of 40px %>
-          <% row_height = 40 %>
-          <% total_grid_height = rows_count * row_height %>
-          <div class="row apt-title text-center">
-            <div class="col-md-12">
-              <h3>Produce</h3>
-            </div>
-          </div>
-          <div class="row apt-body">
-            <div class="col-md-2 font-xxlarge text-right apt-y-axis">
-              <% (1..rows_count).to_a.reverse.each do |item| %>
-                <div><%= item * 10 %>%</div>
-              <% end %>
-            </div>
-            <div class="col-md-10">
-              <div class="row">
-                <% 2.times do |index| %>
-                  <div class="col-md-6 apt-col">
-                    <div class="grid" style="height: <%= total_grid_height %>px;">
-                      <% current_row_height = percentages[index] * row_height / 10 %>
-                      <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
-                    </div>
-                    <div class="apt-x-axis text-center font-xxlarge">
-                      <%= "#{10 * index + (index/100.0).ceil} - #{10 * (index + 1)}" %>
-                    </div>
-                  </div>
-                <% end %>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="tab-pane active" id="kindergarten" role="tabpanel">
 
-    <div class="tab-pane" id="base_10" role="tabpanel">
-      <% rows_count = 10 %>
-      <% percentages = [15, 40, 10, 80] %>
-      <%# one row has a height of 40px %>
-      <% row_height = 40 %>
-      <% total_grid_height = rows_count * row_height %>
-      <div class="row apt-title text-center">
-        <div class="col-md-12">
-          <h3>Count</h3>
-        </div>
-      </div>
-      <div class="row apt-body">
-        <div class="col-md-1 font-xxlarge text-right apt-y-axis">
-          <% (1..rows_count).to_a.reverse.each do |item| %>
-            <div><%= item * 10 %>%</div>
-          <% end %>
-        </div>
-        <div class="col-md-11">
-          <div class="row">
-            <% 4.times do |index| %>
-              <div class="col-md-3 apt-col">
-                <div class="grid" style="height: <%= total_grid_height %>px;">
-                  <% current_row_height = percentages[index] * row_height / 10 %>
-                  <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
-                </div>
-                <div class="apt-x-axis text-center font-xxlarge">
-                  <%= "#{5 * index + (index/100.0).ceil} - #{5 * (index + 1)} minutes" %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
+      <div class="row kmSection">
+        <ul class="nav nav-pills simple nav-justified">
+          <li role="presentation" class="active"><a href="#kg_count_card_20" data-toggle="pill">Counting and Cardianlity to 20</a></li>
+          <li role="presentation"><a href="#kg_base_10" data-toggle="pill">Base 10</a></li>
+          <li role="presentation"><a href="#kg_number_line_model" data-toggle="pill">Number line model</a></li>
+          <li role="presentation"><a href="#kg_count_all" data-toggle="pill">Addition and Subtraction: Count All</a></li>
+        </ul>
       </div>
 
-      <% rows_count = 10 %>
-      <% percentages = [15, 40, 10, 80] %>
-      <%# one row has a height of 40px %>
-      <% row_height = 40 %>
-      <% total_grid_height = rows_count * row_height %>
-      <div class="row apt-title text-center">
-        <div class="col-md-12">
-          <h3>Produce</h3>
-        </div>
-      </div>
-      <div class="row apt-body">
-        <div class="col-md-1 font-xxlarge text-right apt-y-axis">
-          <% (1..rows_count).to_a.reverse.each do |item| %>
-            <div><%= item * 10 %>%</div>
-          <% end %>
-        </div>
-        <div class="col-md-11">
-          <div class="row">
-            <% 4.times do |index| %>
-              <div class="col-md-3 apt-col">
-                <div class="grid" style="height: <%= total_grid_height %>px;">
-                  <% current_row_height = percentages[index] * row_height / 10 %>
-                  <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
-                </div>
-                <div class="apt-x-axis text-center font-xxlarge">
-                  <%= "#{5 * index + (index/100.0).ceil} - #{5 * (index + 1)} minutes" %>
-                </div>
+      <div class="container kmSection">
+        <div class="tab-content">
+          <div class="tab-pane active" id="kg_count_card_20" role="tabpanel">
+            <div class="row">
+              <div class="col-md-6">
+                <%= render 'bar_chart', title: 'Count', values: [75, 25], rows_count: 10 %>
               </div>
-            <% end %>
+              <div class="col-md-6">
+                <%= render 'bar_chart', title: 'Produce', values: [33, 66], rows_count: 10 %>
+              </div>
+            </div>
           </div>
+
+          <div class="tab-pane" id="kg_base_10" role="tabpanel">
+            <%= render 'bar_chart', title: 'Count', values: [15, 40, 10, 80], rows_count: 10 %>
+            <%= render 'bar_chart', title: 'Produce', values: [20, 10, 15, 55], rows_count: 10 %>
+          </div>
+
+          <div class="tab-pane" id="kg_number_line_model" role="tabpanel">
+            <%= render 'bar_chart', values: [15, 40, 10, 80], rows_count: 10 %>
+          </div>
+
+          <div class="tab-pane" id="kg_count_all" role="tabpanel">
+            <%= render 'bar_chart', values: [20, 10, 15, 55], rows_count: 10 %>
+          </div>
+
         </div>
       </div>
 
     </div>
 
-    <div class="tab-pane" id="number_line_model" role="tabpanel">
-      <% rows_count = 10 %>
-      <% percentages = [100, 80, 40, 20] %>
-      <%# one row has a height of 40px %>
-      <% row_height = 40 %>
-      <% total_grid_height = rows_count * row_height %>
-      <div class="row apt-body">
-        <div class="col-md-1 font-xxlarge text-right apt-y-axis">
-          <% (1..rows_count).to_a.reverse.each do |item| %>
-            <div><%= item * 10 %>%</div>
-          <% end %>
-        </div>
-        <div class="col-md-11">
-          <div class="row">
-            <% 4.times do |index| %>
-              <div class="col-md-3 apt-col">
-                <div class="grid" style="height: <%= total_grid_height %>px;">
-                  <% current_row_height = percentages[index] * row_height / 10 %>
-                  <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
-                </div>
-                <div class="apt-x-axis text-center font-xxlarge">
-                  <%= "#{5 * index + (index/100.0).ceil} - #{5 * (index + 1)}" %>
-                </div>
+    <div class="tab-pane" id="first_grade" role="tabpanel">
+
+      <div class="row kmSection">
+        <ul class="nav nav-pills simple nav-justified">
+          <li role="presentation" class="active"><a href="#g1_count_card_20" data-toggle="pill">Counting and Cardianlity to 20</a></li>
+          <li role="presentation"><a href="#g1_base_10" data-toggle="pill">Base 10</a></li>
+          <li role="presentation"><a href="#g1_number_line_model" data-toggle="pill">Number line model</a></li>
+          <li role="presentation"><a href="#g1_count_all" data-toggle="pill">Count All</a></li>
+          <li role="presentation"><a href="#g1_count_on" data-toggle="pill">Count On</a></li>
+          <li role="presentation"><a href="#g1_compare" data-toggle="pill">Compare</a></li>
+        </ul>
+      </div>
+
+      <div class="container kmSection">
+        <div class="tab-content">
+          <div class="tab-pane active" id="g1_count_card_20" role="tabpanel">
+            <div class="row">
+              <div class="col-md-6">
+                <%= render 'bar_chart', title: 'Count', values: [25, 75] %>
               </div>
-            <% end %>
+              <div class="col-md-6">
+                <%= render 'bar_chart', title: 'Produce', values: [33, 66] %>
+              </div>
+            </div>
           </div>
+
+          <div class="tab-pane" id="g1_base_10" role="tabpanel">
+            <%= render 'bar_chart', title: 'Count', values: [15, 40, 10, 80] %>
+            <%= render 'bar_chart', title: 'Produce', values: [20, 10, 15, 55] %>
+          </div>
+
+          <div class="tab-pane" id="g1_number_line_model" role="tabpanel">
+            <%= render 'bar_chart', values: [20, 10, 15, 55] %>
+          </div>
+
+          <div class="tab-pane" id="g1_count_all" role="tabpanel">
+            <%= render 'bar_chart', values: [75, 100, 20, 50] %>
+          </div>
+
+          <div class="tab-pane" id="g1_count_on" role="tabpanel">
+            <%= render 'bar_chart', values: [80, 60, 45, 15] %>
+          </div>
+
+          <div class="tab-pane" id="g1_compare" role="tabpanel">
+            <%= render 'bar_chart', values: [30, 35, 75, 10] %>
+          </div>
+
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
 </div>
 
